syntax="proto3";
package orderapi;

option go_package = "./gen/order";

import "google/api/annotations.proto";
// import "protoc-gen-openapiv2/options/annotations.proto";


service OrderService {
  rpc DelOrderById(DelOrderRequest) returns (DelOrderResponse) {
    option (google.api.http) = {
      post: "/api/v1/order/del/{orderId}"
      body: "*"
    };
    // option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    //   summary: "List item types"
    //   description: "List all item types on the server."
    //   tags: "ItemTypes"
    // };
  }

  rpc GetOrderById(GetOrderByIdRequest) returns (GetOrderByIdResponse) {
    option (google.api.http) = {
      get: "/api/v1/order/{orderId}"
    };
    // option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    //   summary: "get order by orderId"
    //   description: "get Order detail"
    //   tags: "GetOrderById"
    // };
  }
}

message DelOrderRequest {
  string orderId = 1;
}
message DelOrderResponse {
  int32 count = 1;
}

message GetOrderByIdRequest{
  string orderId = 1;
}
message GetOrderByIdResponse{
  OrderDto order = 1;
}

message OrderDto {
  string orderId = 1;
  int32 type = 2;
  double price = 3;
  string image = 4;
  string createTime = 5;
  string updateTime = 6;
}